Bug 91380 - .ui based Docking windows don't have title bars (Windows only)
Summary: .ui based Docking windows don't have title bars (Windows only)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Windows (All)
: highest blocker
Assignee: Andras Timar
URL:
Whiteboard: target:5.1.0 target:5.0.0.2
Keywords: bibisectRequest, regression
: 91524 91608 91610 92003 92285 92327 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-19 12:02 UTC by baffclan
Modified: 2016-10-25 19:19 UTC (History)
13 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (118.45 KB, image/jpeg)
2015-05-20 12:23 UTC, baffclan
Details
Image with issue (80.75 KB, image/png)
2015-05-29 20:55 UTC, Olivier Hallot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description baffclan 2015-05-19 12:02:37 UTC
Animation Dialog has not Title Bar

Steps to Reproduce:
1. Start LibO-Dev
2. Make a New Impress Presentation
3. Insert Animation, Menu - Insert - Animated Image
4. Appear Animation Dialog 


daily/master/Win-x86@62-merge-TDF/2015-05-16_03.18.47

Version: 5.0.0.0.alpha1+
Build ID: 6664859e1e8b3f8b7db8c931b8d0335510c20ce0
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-05-16_03:18:47
Locale: ja-JP (ja_JP)
Comment 1 baffclan 2015-05-20 12:23:20 UTC
Created attachment 115748 [details]
Screenshot
Comment 2 baffclan 2015-05-22 11:18:49 UTC
Sorry, it is UI problem.
Components: Impress -> UI
Comment 3 Jean-Baptiste Faure 2015-05-23 07:23:21 UTC
Not reproducible for me with Version: 5.0.0.0.beta1+
Build ID: 7f49a466e85b5f5866e6af28d84ed06697e49d20
Ubuntu_15.04_x86-64
Locale : fr-FR (fr_FR.UTF-8)

The title is "Animation". Perhaps a Windows-only problem.

Best regards. JBF
Comment 4 Buovjaga 2015-05-23 12:13:52 UTC
Confirmed.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: d8208da8576874fdb07014287e6cbc0aeba741bb
TinderBox: Win-x86@39, Branch:master, Time: 2015-05-23_09:23:03
Locale: fi-FI (fi_FI)
Comment 5 Michael 2015-05-23 16:17:37 UTC
Sounds like it's related to #91524
Comment 6 Adolfo Jayme Barrientos 2015-05-28 17:23:37 UTC
*** Bug 91524 has been marked as a duplicate of this bug. ***
Comment 7 Adolfo Jayme Barrientos 2015-05-28 17:23:42 UTC
*** Bug 91608 has been marked as a duplicate of this bug. ***
Comment 8 Adolfo Jayme Barrientos 2015-05-28 17:23:45 UTC
*** Bug 91610 has been marked as a duplicate of this bug. ***
Comment 9 Olivier Hallot 2015-05-29 20:54:10 UTC
Confirmed: pt-BR has untranslated strings, no window decoration for color picker. See image.
Comment 10 Olivier Hallot 2015-05-29 20:55:09 UTC
Created attachment 116155 [details]
Image with issue
Comment 11 Adolfo Jayme Barrientos 2015-06-11 09:42:35 UTC
*** Bug 92003 has been marked as a duplicate of this bug. ***
Comment 12 Andras Timar 2015-06-20 11:38:39 UTC
It is related to .ui conversion of docking windows. i.e. before conversion it was OK, after it there is no titlebar on Windows. I tested with:

0ef2fa8 convert RID_SVXDLG_BMPMASK dockingwindow to .ui
Comment 13 Thomas Krumbein 2015-06-22 15:06:43 UTC
Attention: Bug is still present in 5.0.0.1 - the official RC1!! 

RC 1 overwrites an existing stable 4.x version!

For users the only possibility to close those "ghost"-frames is to create a new user profile. This is a NOGo!!
Comment 14 Maxim Monastirsky 2015-06-22 15:49:02 UTC
From what I can see, all the affected windows have type_hint=dock property, so maybe this kind doesn't get the right WinBits?

If someone here has a Windows build, he could experiment with it, to see what WinBits are actually missing:

http://opengrok.libreoffice.org/xref/core/vcl/source/window/builder.cxx#1047
Comment 15 Maxim Monastirsky 2015-06-24 07:28:10 UTC
*** Bug 92285 has been marked as a duplicate of this bug. ***
Comment 16 tommy27 2015-06-24 08:19:20 UTC
just to tell that the lack of titlebar makes those docking windows unmovable and unclosable, so I consider it a blocker.
Comment 17 Andras Timar 2015-06-24 08:41:21 UTC
(In reply to tommy27 from comment #16)
> just to tell that the lack of titlebar makes those docking windows unmovable
> and unclosable, so I consider it a blocker.

I can close them with the Esc key.
Comment 18 Andras Timar 2015-06-24 08:55:08 UTC
(In reply to Maxim Monastirsky from comment #14)
> From what I can see, all the affected windows have type_hint=dock property,
> so maybe this kind doesn't get the right WinBits?
> 
> If someone here has a Windows build, he could experiment with it, to see
> what WinBits are actually missing:
> 
> http://opengrok.libreoffice.org/xref/core/vcl/source/window/builder.cxx#1047

I had the same WinBits in Linux and Windows: A0000460
WB_SIZEABLE | WB_3DLOOK | WB_CLOSEABLE | WB_HIDE | WB_DOCKABLE
Comment 19 Andras Timar 2015-06-24 09:21:17 UTC
I have a fix at https://gerrit.libreoffice.org/#/c/16444/ (tested and worked on Windows, no adverse effect on Linux). I asked for review, because it was just a hack without deep understanding of the underlying behaviour.
Comment 20 Commit Notification 2015-06-24 10:42:58 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5427d69fa05dd118eb2160999cf6f2a6a6097886

tdf#91380 add WB_MOVEABLE bit to docking windows

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2015-06-24 10:43:06 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b530da968be856ea8fc23887104da46a266e09be&h=libreoffice-5-0

tdf#91380 add WB_MOVEABLE bit to docking windows

It will be available in 5.0.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 22 baffclan 2015-06-25 11:24:30 UTC
Cannot reproduce with newest master.

Windows 7 Pro x64
Version: 5.1.0.0.alpha1+ (x64)
Build ID: 253c0f073715b1d0f6ba063b1182016e45951bf4
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-06-24_21:31:12
Locale: ja-JP (ja_JP)

Thanks for fixing this.
Comment 23 Maxim Monastirsky 2015-06-25 11:49:12 UTC
*** Bug 92327 has been marked as a duplicate of this bug. ***
Comment 24 Robinson Tryon (qubit) 2015-12-17 09:09:37 UTC Comment hidden (obsolete)