tdf#91380 add WB_MOVEABLE bit to docking windows

Change-Id: Iab913747180bf1588da2d703069650e3e6916414
Reviewed-on: https://gerrit.libreoffice.org/16445
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>